--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,32 @@
 asgiref==3.11.1
 attrs==25.4.0
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+cryptography==46.0.5
 Django==6.0.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-spectacular==0.29.0
+google-auth==2.48.0
+google-auth-oauthlib==1.2.4
+idna==3.11
 inflection==0.5.1
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
+oauthlib==3.3.1
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==3.0
 PyJWT==2.11.0
 python-dotenv==1.2.1
 PyYAML==6.0.3
 referencing==0.37.0
+requests==2.32.5
+requests-oauthlib==2.0.0
 rpds-py==0.30.0
+rsa==4.9.1
 sqlparse==0.5.5
 typing_extensions==4.15.0
 uritemplate==4.2.0
+urllib3==2.6.3
