--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,5 @@ sqlparse==0.5.5
 typing_extensions==4.15.0
 uritemplate==4.2.0
 urllib3==2.6.3
+django-cors-headers==4.6.0
+google-auth-httplib2==0.2.0
